Closed
Bug 36831
Opened 25 years ago
Closed 25 years ago
assertions when using imap in nsSocketTransport.cpp (no mPrintHost)
Categories
(MailNews Core :: Backend, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
M16
People
(Reporter: sspitzer, Assigned: gagan)
Details
(Whiteboard: [dogfood+])
logging in and using imap on the tip, you'll get a billion of these asserts.
NTDLL! 77f7629c()
nsDebug::Assertion(const char * 0x01df14d4, const char * 0x01df14d0, const char
* 0x01df1494, int 2332) line 191 + 13 bytes
nsSocketTransport::fireStatus(unsigned int 5) line 2332 + 35 bytes
nsSocketTransport::Process(short 3) line 620
nsSocketTransportService::Run(nsSocketTransportService * const 0x0267e0e4) line
417 + 13 bytes
nsThread::Main(void * 0x0267f7b0) line 84 + 26 bytes
_PR_NativeRunThread(void * 0x0267f640) line 399 + 13 bytes
_threadstartex(void * 0x0267f490) line 212 + 13 bytes
KERNEL32! 77f04ee8()
Comment 1•25 years ago
|
||
Gagan, this is making it very very difficult to use mail in the debug builds.
Can you please look at this ASAP.
If we can't get this fixed today I'm going to debug_gagan the assertion failure
so you can look into it on your own if that's okay with you.
Remember to run imap as a smoketest if you are making nsSocketTransport changes =).
Severity: normal → blocker
Reporter | ||
Comment 2•25 years ago
|
||
wrapped the assertion with #ifdef DEBUG_gagan until gagan fixes the real
problem.
Comment 3•25 years ago
|
||
Thanks for checking this change in Seth. Gagan, I don't know what the
ramifications of the assert were but mailnews isn't the only one that triggers
it on. If you look at the smoketest logs on tinderbox you'll see that it was
hitting your assertion a lot too for loading web pages and ftp I think....
ooops... this was an accidental checkin. I will remove the assertion (its safe
to do so) as soon as the tree opens. Sorry for all the assertion noise!
Status: NEW → ASSIGNED
Target Milestone: --- → M16
checked in...
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•