Fixed bug 36831. Removed an accidental checkin of an assertion.